# csound_max

./: .gitignore  CMakeLists.txt  Makefile  README.md
source/projects/csound6~/: CMakeLists.txt  csound6~.c
source/scripts/: build_dependencies.sh  fix_bundle.sh
